# cyberdog2_Jazzy

./: README.md
cyberdog_locomotion/: package.xml
cyberdog_locomotion/common/: CMakeLists.txt
cyberdog_locomotion/common/include/utilities/: utilities.hpp
cyberdog_locomotion/common/src/control_parameters/: control_parameters.cpp
cyberdog_locomotion/control/: CMakeLists.txt
cyberdog_simulator/cyberdog_example/src/: keybroad_commander.cpp
cyberdog_simulator/cyberdog_gazebo/: CMakeLists.txt  package.xml
cyberdog_simulator/cyberdog_gazebo/include/: actuator.hpp  foot_contact_plugin.hpp  legged_plugin.hpp
cyberdog_simulator/cyberdog_gazebo/include/ctrl_ros/utilities/: utilities.h
cyberdog_simulator/cyberdog_gazebo/launch/: gazebo.launch.py
cyberdog_simulator/cyberdog_gazebo/params/: cyberdog_bridge.yaml
cyberdog_simulator/cyberdog_gazebo/script/: launchcontrol.sh  launchgazebo.sh  launchsim.py  launchvisual.sh
cyberdog_simulator/cyberdog_gazebo/src/: foot_contact_plugin.cpp  lcmhandler.cpp  legged_plugin.cpp  legged_simparam.cpp
cyberdog_simulator/cyberdog_gazebo/src/control_parameters/: control_parameters.cpp
cyberdog_simulator/cyberdog_gazebo/world/: simple copy.world  simple.world
cyberdog_simulator/cyberdog_robot/cyberdog_description/: CMakeLists.txt
cyberdog_simulator/cyberdog_robot/cyberdog_description/xacro/: gazebo.xacro  leg.xacro
cyberdog_simulator/cyberdog_visual/include/cyberdog_visual/: cyberdog_visual.hpp
